# bevy_zombie_test

./: Cargo.toml
src/: main.rs  zombie_state.rs
